[gd_scene load_steps=4 format=3 uid="uid://inventory_menu"]

[ext_resource type="Script" path="res://scenes/exploration/ui/inventory_menu.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/exploration/ui/components/equipment_slot.tscn" id="2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.1, 0.1, 0.1, 0.95)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.3, 0.3, 0.5, 1)

[node name="InventoryMenu" type="CanvasLayer"]
script = ExtResource("1")

[node name="BackgroundOverlay" type="ColorRect" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)
mouse_filter = 2

[node name="MenuPanel" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -600.0
offset_top = -400.0
offset_right = 600.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="Header" type="HBoxContainer" parent="MenuPanel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -40.0
offset_right = -10.0
offset_bottom = -10.0
grow_vertical = 0

[node name="Title" type="Label" parent="MenuPanel/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Inventory"

[node name="CloseButton" type="Button" parent="MenuPanel/Header"]
layout_mode = 2
text = "X"

[node name="MainContainer" type="HBoxContainer" parent="MenuPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 50.0
offset_right = -10.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="LeftPanel" type="VBoxContainer" parent="MenuPanel/MainContainer"]
layout_mode = 2
custom_minimum_size = Vector2(200, 0)
size_flags_horizontal = 0

[node name="StatsPanel" type="VBoxContainer" parent="MenuPanel/MainContainer/LeftPanel"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="StatsTitle" type="Label" parent="MenuPanel/MainContainer/LeftPanel/StatsPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Player Stats"

[node name="HealthLabel" type="Label" parent="MenuPanel/MainContainer/LeftPanel/StatsPanel"]
layout_mode = 2
text = "Health: 20/20"

[node name="LevelLabel" type="Label" parent="MenuPanel/MainContainer/LeftPanel/StatsPanel"]
layout_mode = 2
text = "Level: 1"

[node name="XPLabel" type="Label" parent="MenuPanel/MainContainer/LeftPanel/StatsPanel"]
layout_mode = 2
text = "XP: 0/100"

[node name="AttackLabel" type="Label" parent="MenuPanel/MainContainer/LeftPanel/StatsPanel"]
layout_mode = 2
text = "Attack: 5"

[node name="DefenseLabel" type="Label" parent="MenuPanel/MainContainer/LeftPanel/StatsPanel"]
layout_mode = 2
text = "Defense: 3"

[node name="CurrencyLabel" type="Label" parent="MenuPanel/MainContainer/LeftPanel/StatsPanel"]
layout_mode = 2
text = "Currency: 0"

[node name="RightPanel" type="VBoxContainer" parent="MenuPanel/MainContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="EquipmentContainer" type="VBoxContainer" parent="MenuPanel/MainContainer/RightPanel"]
layout_mode = 2
size_flags_vertical = 0

[node name="EquipmentTitle" type="Label" parent="MenuPanel/MainContainer/RightPanel/EquipmentContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Equipment"

[node name="EquipmentSlots" type="HBoxContainer" parent="MenuPanel/MainContainer/RightPanel/EquipmentContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 10

[node name="WeaponSlot" parent="MenuPanel/MainContainer/RightPanel/EquipmentContainer/EquipmentSlots" instance=ExtResource("2")]

[node name="ArmorSlot" parent="MenuPanel/MainContainer/RightPanel/EquipmentContainer/EquipmentSlots" instance=ExtResource("2")]

[node name="Accessory1Slot" parent="MenuPanel/MainContainer/RightPanel/EquipmentContainer/EquipmentSlots" instance=ExtResource("2")]

[node name="Accessory2Slot" parent="MenuPanel/MainContainer/RightPanel/EquipmentContainer/EquipmentSlots" instance=ExtResource("2")]

[node name="Accessory3Slot" parent="MenuPanel/MainContainer/RightPanel/EquipmentContainer/EquipmentSlots" instance=ExtResource("2")]

[node name="InventoryTitle" type="Label" parent="MenuPanel/MainContainer/RightPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Inventory"

[node name="InventoryGrid" type="GridContainer" parent="MenuPanel/MainContainer/RightPanel"]
layout_mode = 2
size_flags_vertical = 3
columns = 6

[node name="CardsButton" type="Button" parent="MenuPanel/MainContainer/RightPanel"]
layout_mode = 2
text = "View Card Collection"
